<resources>
    <string name="app_name">Etamax 2k18</string>

    <string name="settings_file">EVENTLY_PREFS</string>
    <string name="token_key">TOKEN</string>
    <string name="uid_key">UID</string>
    <string name="uname_key">UNAME</string>
    <string name="conf_key">CONF</string>
    <string name="urole_key">UROLE</string>

    <string name="progress_loading">Loading...</string>
    <string name="text_etamax_login">Etamax2k18</string>
    <string name="btn_login">Login</string>
    <string name="btn_signup">Sign Up</string>
    <string name="btn_day_one">DAY ONE</string>
    <string name="btn_day_two">DAY TWO</string>
    <string name="btn_day_three">DAY THREE</string>
    <string name="btn_register">Register</string>

    <string name="text_login">Sign In</string>
    <string name="text_register">Register</string>
    <string name="text_time">16:00-17:00</string>
    <string name="text_event">Event Name</string>
    <string name="text_event_description">Some Description</string>
    <string name="text_price">50</string>
    <string name="text_total">Total</string>
    <string name="text_sponsors">Sponsors</string>
    <string name="text_events">Events</string>
    <string name="text_committee">Committee</string>
    <string name="text_college">College Info</string>
    <string name="text_etamax">About Etamax</string>
    <string name="text_unconfirmed">UNC</string>

    <string name="currency_rupee">₹</string>
    <string name="scanner">Scanner</string>

    <string name="toast_login_failed">Something went wrong!</string>

    <string name="hint_email">Enter a valid email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Name</string>
    <string name="hint_roll_no">Roll Number</string>
    <string name="hint_phone_no">Phone Number</string>

    <string name="signup_helper">Not a member? Sign Up Here</string>

    <string name="branch_prompt">Select your branch</string>
    <string-array name="branch_array">
        <item>Computer Engineering</item>
        <item>Mechanical Engineering</item>
        <item>Electrical Engineering</item>
        <item>IT Engineering</item>
        <item>EXTC Engineering</item>
        <item>Other</item>
    </string-array>
    <string name="semester_prompt">Select your semester</string>
    <string-array name="semester_array">
        <item>2</item>
        <item>4</item>
        <item>6</item>
        <item>8</item>
    </string-array>
    <string name="college_prompt">Select your college</string>
    <string-array name="college_array">
        <item>FCRIT</item>
        <item>Other</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="info_college">file:///android_asset/college_info.md</string>
    <string name="info_etamax">file:///android_asset/etamax_info.md</string>
    <string name="info_theme">file:///android_asset/theme_info.md</string>

    <string name="contact_name_0">Felix Biju</string>
    <string name="contact_name_1">Rahul Wable</string>
    <string name="contact_name_2">Aleena George</string>
    <string name="contact_name_3">Naveen Pophare</string>
    <string name="contact_name_4">Prateik Malla</string>
    <string name="contact_name_5">Neha Honagekar</string>
    <string name="contact_name_6">Roy Viegas</string>
    <string name="contact_name_7">Mayur Kasbe</string>
    <string name="contact_name_8">Vinny Mathew</string>
    <string name="contact_name_9">Tina Rikame</string>
    <string name="contact_name_10">Robert Livingston</string>
    <string name="contact_name_11">Tanmay Sharma</string>
    <string name="contact_name_12">Vijaya Naik</string>
    <string name="contact_name_13">Shashank Panikkar</string>
    <string name="contact_name_14">Athul Anilkumar</string>
    <string name="contact_name_15">Ashley Noronha</string>
    <string name="contact_name_16">Darshan Varma</string>
    <string name="contact_name_17">Urvi Kachole</string>
    <string name="contact_name_18">Vinita Gaikwad</string>
    <string name="contact_name_19">Pratik Shetty</string>

    <string name="contact_post_0">General Sec</string>
    <string name="contact_post_1">Sponsorship Head</string>
    <string name="contact_post_2">Asst. Treasurer</string>
    <string name="contact_post_3">Sponsorship Head</string>
    <string name="contact_post_4">Cultural Sec.</string>
    <string name="contact_post_5">Asst. Technical Sec.</string>
    <string name="contact_post_6">Sports Sec.</string>
    <string name="contact_post_7">Documentation Head</string>
    <string name="contact_post_8">Asst. Cultural Sec.</string>
    <string name="contact_post_9">Asst. Ladies Representative</string>
    <string name="contact_post_10">Security Head</string>
    <string name="contact_post_11">Asst. Sports Sec.</string>
    <string name="contact_post_12">Ladies Representative</string>
    <string name="contact_post_13">Creative Head</string>
    <string name="contact_post_14">Creative Head</string>
    <string name="contact_post_15">Treasurer</string>
    <string name="contact_post_16">Technical Sec.</string>
    <string name="contact_post_17">Asst. General Sec.</string>
    <string name="contact_post_18">Documentation Head</string>
    <string name="contact_post_19">Public Relation Head</string>

    <string name="contact_branch_0">COMPS</string>
    <string name="contact_branch_1">COMPS</string>
    <string name="contact_branch_2">COMPS</string>
    <string name="contact_branch_3">COMPS</string>
    <string name="contact_branch_4">MECH</string>
    <string name="contact_branch_5">MECH</string>
    <string name="contact_branch_6">MECH</string>
    <string name="contact_branch_7">MECH</string>
    <string name="contact_branch_8">IT</string>
    <string name="contact_branch_9">IT</string>
    <string name="contact_branch_10">IT</string>
    <string name="contact_branch_11">IT</string>
    <string name="contact_branch_12">Elec</string>
    <string name="contact_branch_13">Elec</string>
    <string name="contact_branch_14">Elec</string>
    <string name="contact_branch_15">Elec</string>
    <string name="contact_branch_16">EXTC</string>
    <string name="contact_branch_17">EXTC</string>
    <string name="contact_branch_18">EXTC</string>
    <string name="contact_branch_19">EXTC</string>

    <string name="contact_phone_0">+91 9833620386</string>
    <string name="contact_phone_1">+91 9920248311</string>
    <string name="contact_phone_2">+91 8451844543</string>
    <string name="contact_phone_3">+91 9619594226</string>
    <string name="contact_phone_4">+91 8779954053</string>
    <string name="contact_phone_5">+91 7666293545</string>
    <string name="contact_phone_6">+91 9619981607</string>
    <string name="contact_phone_7">+91 9730461105</string>
    <string name="contact_phone_8">+91 8779925476</string>
    <string name="contact_phone_9">+91 7710921919</string>
    <string name="contact_phone_10">+91 9920331437</string>
    <string name="contact_phone_11">+91 9820953717</string>
    <string name="contact_phone_12">+91 9167027997</string>
    <string name="contact_phone_13">+91 9029952501</string>
    <string name="contact_phone_14">+91 9769891522</string>
    <string name="contact_phone_15">+91 8097245166</string>
    <string name="contact_phone_16">+91 7738879344</string>
    <string name="contact_phone_17">+91 9869471965</string>
    <string name="contact_phone_18">+91 8097544542</string>
    <string name="contact_phone_19">+91 9619440997</string>
</resources>
