<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back3"
    tools:context="io.github.dsouzadyn.evently.SignUpActivity">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:paddingTop="16dp">
        <TextView

            android:text="@string/text_register"
            android:textColor="@color/colorWhite"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Display2"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/signUpName"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:textColorHint="@color/colorWhite"
            android:textColor="@color/colorWhite"
            android:hint="@string/hint_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/signUpEmail"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:hint="@string/hint_email"
            android:textColorHint="@color/colorWhite"
            android:textColor="@color/colorWhite"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/signUpPassword"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:hint="@string/hint_password"
            android:textColorHint="@color/colorWhite"

            android:textColor="@color/colorWhite"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/signUpRollNumber"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:inputType="number"
            android:hint="@string/hint_roll_no"
            android:textColorHint="@color/colorWhite"
            android:textColor="@color/colorWhite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/signUpPhoneNumber"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:inputType="phone"
            android:hint="@string/hint_phone_no"
            android:textColorHint="@color/colorWhite"
            android:textColor="@color/colorWhite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Spinner
            android:id="@+id/signUpBranch"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:spinnerMode="dialog"
            android:prompt="@string/branch_prompt"
            android:background="@color/colorWhite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:entries="@array/branch_array" />
        <Spinner
            android:id="@+id/signUpSemester"
            android:spinnerMode="dialog"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:prompt="@string/semester_prompt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:background="@color/colorWhite"
            android:entries="@array/semester_array" />
        <Spinner
            android:id="@+id/signUpCollege"
            android:spinnerMode="dialog"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:prompt="@string/college_prompt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:background="@color/colorWhite"
            android:entries="@array/college_array" />

        <Button
            android:id="@+id/signUpBtn"
            android:background="@color/colorAccent"
            android:textColor="@color/colorWhite"
            android:padding="16dp"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:text="@string/btn_signup"
            android:layout_height="wrap_content" />
    </LinearLayout>
</ScrollView>
