<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context="io.github.dsouzadyn.evently.fragments.HomeFragment">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageButton
                android:id="@+id/scannerBtn"
                android:src="@drawable/ic_maximize"
                android:layout_width="32dp"
                android:background="@color/colorWhite"
                android:contentDescription="@string/scanner"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginEnd="16dp"
                android:layout_gravity="right"
                android:visibility="gone"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/btnLogout"
                android:text="Logout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:columnCount="2">
        <LinearLayout
            android:layout_height="192dp"
            android:layout_gravity="fill"
            android:gravity="center"
            android:paddingLeft="32dp"
            android:paddingRight="32dp"
            android:orientation="vertical">
            <ImageButton
                android:id="@+id/btnSponsors"
                android:src="@drawable/ic_dollar_sign"
                android:background="@color/colorWhite"
                android:contentDescription="@string/text_sponsors"
                android:layout_width="96dp"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_marginTop="32dp"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_sponsors"/>
        </LinearLayout>
        <LinearLayout
            android:layout_height="192dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:paddingLeft="32dp"
            android:paddingRight="32dp"
            android:orientation="vertical">
            <ImageButton
                android:id="@+id/btnEvents"
                android:src="@drawable/ic_calendar"
                android:background="@color/colorWhite"
                android:contentDescription="@string/text_events"
                android:layout_width="96dp"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_marginTop="32dp"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_events"/>
        </LinearLayout>
        <LinearLayout
            android:layout_height="192dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:paddingLeft="32dp"
            android:paddingRight="32dp"
            android:orientation="vertical">
            <ImageButton
                android:id="@+id/btnCommittee"
                android:src="@drawable/ic_users"
                android:background="@color/colorWhite"
                android:contentDescription="@string/text_committee"
                android:layout_width="96dp"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_marginTop="32dp"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_committee"/>
        </LinearLayout>
        <LinearLayout
            android:layout_height="192dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:paddingLeft="32dp"
            android:paddingRight="32dp"
            android:orientation="vertical">
            <ImageButton
                android:id="@+id/btnCollegeInfo"
                android:src="@drawable/ic_info"
                android:background="@color/colorWhite"
                android:contentDescription="@string/text_college"
                android:layout_width="96dp"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_marginTop="32dp"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_college"/>
        </LinearLayout>
        <LinearLayout
            android:layout_height="192dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:paddingLeft="32dp"
            android:paddingRight="32dp"
            android:orientation="vertical">
            <ImageButton
                android:id="@+id/btnAboutEtamax"
                android:src="@drawable/ic_zap"
                android:background="@color/colorWhite"
                android:contentDescription="@string/text_etamax"
                android:layout_width="96dp"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_marginTop="32dp"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_etamax"/>
        </LinearLayout>


    </GridLayout>
    </LinearLayout>
</ScrollView>
