<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorAccent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="18dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="12dp">
            <TextView
                android:layout_margin="16dp"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Display1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Hello"/>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="18dp"
            android:layout_marginLeft="18dp"
            android:layout_marginBottom="16dp">
            <android.support.v7.widget.RecyclerView
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/recieptList"
                android:name="io.github.dsouzadyn.evently.RecieptFragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                app:layoutManager="LinearLayoutManager"
                tools:context="io.github.dsouzadyn.evently.fragments.RecieptFragment"
                tools:listitem="@layout/fragment_reciept" />
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="18dp"
            android:layout_marginLeft="18dp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="172dp"
                    android:layout_height="wrap_content"
                    android:text="@string/text_total"
                    android:layout_margin="@dimen/text_margin"
                    android:textAppearance="?attr/textAppearanceListItem" />

                <TextView
                    android:id="@+id/totalPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/text_margin"
                    android:textAppearance="?attr/textAppearanceListItem" />
            </LinearLayout>

        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="18dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="12dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/qrImage"
                    android:layout_width="112dp"
                    android:layout_height="112dp"
                    android:contentDescription="@string/app_name"
                    android:layout_margin="16dp"/>
                <TextView
                    android:id="@+id/confirmationText"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Display1"
                    android:text="@string/text_unconfirmed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="16dp"/>

            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>

</ScrollView>

